# fabric

./: .gitignore  README.md  dune-project  fabric.opam
binaryen_ctypes/: dune  function_description.ml  type_description.ml
binaryer/: dune  function_description.ml  type_description.ml
docs/: spec.md
lib/: cc.ml  dune  env.ml  env.mli  fabric.ml  spin.ml  yarn.ml
lib/assembly/: asm.ml  assembly.ml  dune
lib/binaryer/: binaryer.ml  binaryer_intf.ml  cell.ml  common.ml  const.ml  control.ml  dune  function.ml  memory.ml  operator.ml  table.ml  type.ml
lib/compiler/: compiler.ml  dune  free.ml  lift.ml  typed.ml
lib/lang/: alg.ml  dune  fabric.ml  lang.ml  polar.ml  row.ml  sym.ml
lib/skeleton/: dune  fabric.ml  fiber.ml  pacc.ml  spin.ml
lib/syntax/: dune  parser.ml  syntax.ml
lib/types/: dune  fabric.ml  sig.ml  star.ml  sub.ml  sup.ml  types.ml
test/: dune  test_binaryen.ml  test_binaryer.ml  test_fabric.ml
