(library
 (name binaryen_ctypes)
 (libraries ctypes core)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-27))
 (ocamlopt_flags -cc clang++)
 (ctypes
  (external_library_name libbinaryen)
  (build_flags_resolver (pkg_config))
  (headers
   (include "binaryen-c.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point Binaryen_ctypes)))
